tests/conformance/typecheck/invalid/literal_pattern_wrong_scrutinee_type.ks
// EXPECT: Cannot unify types
val b = True
val result = match (b) {
  0 => 1,
  _ => 2
}
